samples/_failures_safe/1761515147_e13cd9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28ab380e.c: In function ‘print_token’:
./samples/SAFE/__tmp_28ab380e.c:167:12: error: expected expression at end of input
  167 |            token->line, token->column, type_names[
      |            ^~~~~
./samples/SAFE/__tmp_28ab380e.c:167:12: error: expected declaration or statement at end of input
